--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -712,10 +712,10 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bb4-Bm-TLf">
-                                <rect key="frame" x="72" y="58" width="157" height="32"/>
+                                <rect key="frame" x="13" y="58" width="138" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="gVe-3t-Qfe"/>
-                                    <constraint firstAttribute="width" constant="145" id="yko-ES-qr0"/>
+                                    <constraint firstAttribute="width" constant="126" id="yko-ES-qr0"/>
                                 </constraints>
                                 <buttonCell key="cell" type="push" title="Buy Premium" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oj4-cT-JmZ">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -747,14 +747,26 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RDV-R7-IgN">
+                                <rect key="frame" x="149" y="58" width="138" height="32"/>
+                                <buttonCell key="cell" type="push" title="Restore Purchase" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="D76-P4-yrv">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="restoreButtonClicked:" target="uib-Qp-duf" id="noM-Mc-PeX"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="5CB-ef-M70" secondAttribute="trailing" constant="10" id="0OT-Qb-PXn"/>
                             <constraint firstItem="ABH-g7-fai" firstAttribute="top" secondItem="0NS-o1-xLG" secondAttribute="bottom" id="3gK-Q5-gS9"/>
                             <constraint firstItem="JtC-cY-n52" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="47X-Zp-wbU"/>
+                            <constraint firstItem="RDV-R7-IgN" firstAttribute="centerY" secondItem="bb4-Bm-TLf" secondAttribute="centerY" id="5fh-Fx-KMp"/>
                             <constraint firstItem="0NS-o1-xLG" firstAttribute="leading" secondItem="JtC-cY-n52" secondAttribute="trailing" constant="10" id="5jm-eu-aJ1"/>
                             <constraint firstAttribute="trailing" secondItem="5b4-Tf-YJm" secondAttribute="trailing" constant="10" id="A2d-MN-Ho5"/>
                             <constraint firstItem="5CB-ef-M70" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="Be9-pC-3ia"/>
+                            <constraint firstItem="RDV-R7-IgN" firstAttribute="width" secondItem="bb4-Bm-TLf" secondAttribute="width" id="DEj-3e-HHt"/>
                             <constraint firstItem="JtC-cY-n52" firstAttribute="centerY" secondItem="0NS-o1-xLG" secondAttribute="centerY" constant="9" id="DKo-a1-jZi"/>
                             <constraint firstItem="JtC-cY-n52" firstAttribute="top" secondItem="5rj-bW-yOJ" secondAttribute="top" constant="10" id="G9s-vS-4AV"/>
                             <constraint firstAttribute="bottom" secondItem="jHM-PS-oit" secondAttribute="bottom" constant="5" id="GBh-XE-8XP"/>
@@ -762,9 +774,11 @@
                             <constraint firstItem="jHM-PS-oit" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="RlR-23-ig9"/>
                             <constraint firstItem="ABH-g7-fai" firstAttribute="centerX" secondItem="0NS-o1-xLG" secondAttribute="centerX" id="Rof-g0-RAB"/>
                             <constraint firstItem="5CB-ef-M70" firstAttribute="top" secondItem="JtC-cY-n52" secondAttribute="bottom" constant="20" id="Wlo-Sj-TwW"/>
+                            <constraint firstItem="RDV-R7-IgN" firstAttribute="leading" secondItem="bb4-Bm-TLf" secondAttribute="trailing" constant="10" id="WpM-gb-XzI"/>
                             <constraint firstAttribute="trailing" secondItem="0NS-o1-xLG" secondAttribute="trailing" constant="11" id="ZIB-iQ-vad"/>
-                            <constraint firstAttribute="centerX" secondItem="bb4-Bm-TLf" secondAttribute="centerX" id="a8R-Pd-Fjf"/>
+                            <constraint firstAttribute="centerX" secondItem="bb4-Bm-TLf" secondAttribute="centerX" constant="68" id="a8R-Pd-Fjf"/>
                             <constraint firstItem="jHM-PS-oit" firstAttribute="height" secondItem="5b4-Tf-YJm" secondAttribute="height" id="kvd-3k-MFi"/>
+                            <constraint firstItem="RDV-R7-IgN" firstAttribute="height" secondItem="bb4-Bm-TLf" secondAttribute="height" id="lqx-Yp-9zP"/>
                             <constraint firstItem="5b4-Tf-YJm" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="oHe-b1-6Wg"/>
                             <constraint firstItem="bb4-Bm-TLf" firstAttribute="top" secondItem="5CB-ef-M70" secondAttribute="bottom" id="uCw-Ze-d3d"/>
                             <constraint firstItem="jHM-PS-oit" firstAttribute="top" secondItem="5b4-Tf-YJm" secondAttribute="bottom" id="xqG-td-67Z"/>
@@ -774,6 +788,7 @@
                     <connections>
                         <outlet property="premiumButton" destination="bb4-Bm-TLf" id="lfs-jb-Ula"/>
                         <outlet property="premiumLabel" destination="5CB-ef-M70" id="5YA-mq-nFP"/>
+                        <outlet property="restorePurchaseButton" destination="RDV-R7-IgN" id="S64-8H-vSr"/>
                         <outlet property="versionLabel" destination="ABH-g7-fai" id="A3b-Q1-sep"/>
                     </connections>
                 </viewController>
