--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -642,7 +642,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="AppstoreReviews" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Appstore_Reviews" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <userDefaultsController id="9Su-6Y-XzG"/>
             </objects>
@@ -671,7 +671,7 @@
         <!--About View Controller-->
         <scene sceneID="1AA-vu-7Ja">
             <objects>
-                <viewController id="uib-Qp-duf" customClass="AboutViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="uib-Qp-duf" customClass="AboutViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="5rj-bW-yOJ">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -686,7 +686,7 @@
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0NS-o1-xLG">
                                 <rect key="frame" x="90" y="255" width="201" height="25"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="App Reviews" id="USR-Ul-gwb">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Appstore Reviews" id="USR-Ul-gwb">
                                     <font key="font" metaFont="systemBold" size="21"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -799,7 +799,7 @@
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController storyboardIdentifier="ApplicationWindowController" id="B8D-0N-5wS" customClass="ApplicationWindowController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="ApplicationWindowController" id="B8D-0N-5wS" customClass="ApplicationWindowController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Applications" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -840,14 +840,14 @@
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <customObject id="86x-iU-Nv1" customClass="AppDelegate" customModule="AppstoreReviews" customModuleProvider="target"/>
+                <customObject id="86x-iU-Nv1" customClass="AppDelegate" customModule="Appstore_Reviews" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="-345" y="98"/>
         </scene>
         <!--Review View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController storyboardIdentifier="ReviewViewController" id="XfG-lQ-9wD" customClass="ReviewViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReviewViewController" id="XfG-lQ-9wD" customClass="ReviewViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -878,7 +878,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="tQe-YB-VfM" customClass="ReviewCellView" customModule="AppstoreReviews" customModuleProvider="target">
+                                                        <tableCellView id="tQe-YB-VfM" customClass="ReviewCellView" customModule="Appstore_Reviews" customModuleProvider="target">
                                                             <rect key="frame" x="1" y="1" width="590" height="80"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
@@ -1029,7 +1029,7 @@
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <arrayController mode="entity" entityName="Review" editable="NO" automaticallyPreparesContent="YES" id="M7Y-IO-gaN" customClass="ReviewArrayController" customModule="AppstoreReviews" customModuleProvider="target">
+                <arrayController mode="entity" entityName="Review" editable="NO" automaticallyPreparesContent="YES" id="M7Y-IO-gaN" customClass="ReviewArrayController" customModule="Appstore_Reviews" customModuleProvider="target">
                     <connections>
                         <binding destination="XfG-lQ-9wD" name="managedObjectContext" keyPath="managedObjectContext" id="jwh-mo-Rue"/>
                     </connections>
@@ -1083,7 +1083,7 @@
         <!--Window Controller-->
         <scene sceneID="p6V-mE-HDQ">
             <objects>
-                <windowController storyboardIdentifier="ReviewWindowsController" id="E8W-Gv-fjB" customClass="ReviewWindowController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="ReviewWindowsController" id="E8W-Gv-fjB" customClass="ReviewWindowController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Reviews" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="pOK-I8-SBO">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -1180,7 +1180,7 @@
         <!--Review Split View Controller-->
         <scene sceneID="ZMN-X7-X0t">
             <objects>
-                <splitViewController id="2A9-CB-LU5" customClass="ReviewSplitViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <splitViewController id="2A9-CB-LU5" customClass="ReviewSplitViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <splitViewItems>
                         <splitViewItem id="Lli-4d-HwS"/>
                         <splitViewItem id="Adr-T5-LzQ"/>
@@ -1201,7 +1201,7 @@
         <!--Review Pie Chart Controller-->
         <scene sceneID="Rpk-qy-vrN">
             <objects>
-                <viewController storyboardIdentifier="ReviewPieChartController" id="229-bS-8xR" customClass="ReviewPieChartController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReviewPieChartController" id="229-bS-8xR" customClass="ReviewPieChartController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="UzB-Q6-41q">
                         <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1228,7 +1228,7 @@
         <!--Review Menu View Controller-->
         <scene sceneID="Jyz-Ag-rPD">
             <objects>
-                <viewController id="0pb-y6-Tr2" customClass="ReviewMenuViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="0pb-y6-Tr2" customClass="ReviewMenuViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="WLa-2E-WbT">
                         <rect key="frame" x="0.0" y="0.0" width="200" height="700"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1567,7 +1567,7 @@
         <!--Application View Controller-->
         <scene sceneID="QXW-tm-J9t">
             <objects>
-                <viewController id="tJy-Yh-9gh" customClass="ApplicationViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tJy-Yh-9gh" customClass="ApplicationViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="sAN-a2-N3t">
                         <rect key="frame" x="0.0" y="0.0" width="250" height="420"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1598,7 +1598,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="Ith-aP-WLf" customClass="ApplicationCellView" customModule="AppstoreReviews" customModuleProvider="target">
+                                                        <tableCellView id="Ith-aP-WLf" customClass="ApplicationCellView" customModule="Appstore_Reviews" customModuleProvider="target">
                                                             <rect key="frame" x="1" y="1" width="235" height="50"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
@@ -1734,7 +1734,7 @@
                     </connections>
                 </viewController>
                 <customObject id="cUu-lW-lJc" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <arrayController mode="entity" entityName="Application" editable="NO" automaticallyPreparesContent="YES" id="3uf-4a-TMD" customClass="ApplicationArrayController" customModule="AppstoreReviews" customModuleProvider="target">
+                <arrayController mode="entity" entityName="Application" editable="NO" automaticallyPreparesContent="YES" id="3uf-4a-TMD" customClass="ApplicationArrayController" customModule="Appstore_Reviews" customModuleProvider="target">
                     <connections>
                         <binding destination="tJy-Yh-9gh" name="managedObjectContext" keyPath="managedObjectContext" id="SpB-ho-Pa1"/>
                     </connections>
@@ -1745,7 +1745,7 @@
         <!--Search View Controller-->
         <scene sceneID="pqx-y8-jGT">
             <objects>
-                <viewController id="TwO-IP-OJ1" customClass="SearchViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TwO-IP-OJ1" customClass="SearchViewController" customModule="Appstore_Reviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="doE-mL-S9g">
                         <rect key="frame" x="0.0" y="0.0" width="350" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1776,7 +1776,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView identifier="applicationCell" id="TtC-WN-tE2" customClass="ApplicationCellView" customModule="AppstoreReviews" customModuleProvider="target">
+                                                        <tableCellView identifier="applicationCell" id="TtC-WN-tE2" customClass="ApplicationCellView" customModule="Appstore_Reviews" customModuleProvider="target">
                                                             <rect key="frame" x="1" y="1" width="345" height="50"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
